ci(release-please): Update workflow to allow custom target branch and configuration file paths

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -23,6 +23,11 @@ on:
         required: false
         type: string
         default: "self-hosted"
+      use-gitflow:
+        description: "Optional flag to enable gitflow release"
+        required: false
+        type: boolean
+        default: true
       committer-email:
         description: "Optional committer email"
         required: false
@@ -40,6 +45,48 @@ on:
       APP_PRIVATE_KEY:
         description: "GitHub App Private Key"
         required: true
+    outputs:
+      # https://github.com/googleapis/release-please-action?tab=readme-ov-file#outputs
+      releases_created:
+        description: "Boolean indicating if releases were created"
+        value: ${{ jobs.release-please.outputs.releases_created }}
+      paths_released:
+        description: "A JSON string of the array of paths that had releases created ([] if )"
+        value: ${{ jobs.release-please.outputs.paths_released }}
+      prs_created:
+        description: "Boolean if any pull request was created or updated"
+        value: ${{ jobs.release-please.outputs.prs_created }}
+      pr:
+        description: "A JSON string of the PullRequest object (unset if no release created) https://github.com/googleapis/release-please/blob/main/src/pull-request.ts#L15"
+        value: ${{ jobs.release-please.outputs.pr }}
+      prs:
+        description: "A JSON string of the array of PullRequest objects (unset if no release created) https://github.com/googleapis/release-please/blob/main/src/pull-request.ts#L15"
+        value: ${{ jobs.release-please.outputs.prs }}
+      # https://github.com/googleapis/release-please-action?tab=readme-ov-file#root-component-outputs
+      release_created:
+        description: "Boolean if a root component release was created, false otherwise"
+        value: ${{ jobs.release-please.outputs.release_created }}
+      upload_url:
+        description: "Directly related to Create a release API https://developer.github.com/v3/repos/releases/#response-4"
+        value: ${{ jobs.release-please.outputs.upload_url }}
+      html_url:
+        description: "Directly related to Create a release API https://developer.github.com/v3/repos/releases/#response-4"
+        value: ${{ jobs.release-please.outputs.html_url }}
+      tag_name:
+        description: "Directly related to Create a release API https://developer.github.com/v3/repos/releases/#response-4"
+        value: ${{ jobs.release-please.outputs.tag_name }}
+      major:
+        description: "Major version number"
+        value: ${{ jobs.release-please.outputs.major }}
+      minor:
+        description: "Minor version number"
+        value: ${{ jobs.release-please.outputs.minor }}
+      patch:
+        description: "Patch version number"
+        value: ${{ jobs.release-please.outputs.patch }}
+      sha:
+        description: "SHA of the commit that was released"
+        value: ${{ jobs.release-please.outputs.sha }}
 
 jobs:
   release-please:
@@ -59,6 +106,7 @@ jobs:
       upload_url: ${{ steps.release-please.outputs.upload_url }}
       html_url: ${{ steps.release-please.outputs.html_url }}
       tag_name: ${{ steps.release-please.outputs.tag_name }}
+      # Doesn't exist in docs ?
       version: ${{ steps.release-please.outputs.version }}
       major: ${{ steps.release-please.outputs.major }}
       minor: ${{ steps.release-please.outputs.minor }}
@@ -84,7 +132,7 @@ jobs:
   gitflow-release:
     name: Gitflow release
     needs: release-please
-    if: needs.release-please.outputs.release_created == 'true'
+    if: needs.release-please.outputs.release_created == 'true' && ${{ inputs.use-gitflow }}
     runs-on: [ self-hosted, Linux, X64 ]
     permissions:
       contents: write
