ci(release-please): Should fix runs-on input

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -22,7 +22,7 @@ on:
         description: "Optional label for the runner to run on"
         required: false
         type: string
-        default: "[self-hosted, Linux, X64]"
+        default: "['self-hosted', 'Linux', 'X64']"
       use-gitflow:
         description: "Optional flag to enable gitflow release"
         required: false
