--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -154,7 +154,7 @@ jobs:
   root-gitflow-release:
     name: Gitflow release - Root
     needs: release-please
-    if: ${{ needs.release-please.outputs.release_created == 'true' && inputs.use-root-gitflow == 'true' }}
+    if: ${{ needs.release-please.outputs.release_created == 'true' && inputs.use-root-gitflow == true }}
     runs-on: ${{ fromJSON(inputs.runs-on) }}
     permissions:
       contents: write
@@ -203,7 +203,7 @@ jobs:
   docs-gitflow-release:
     name: Gitflow release - Docs
     needs: release-please
-    if: ${{ fromJSON(needs.release-please.outputs.outputs)['docs--release_created'] == 'true' }}
+    if: ${{ fromJSON(needs.release-please.outputs.outputs)['docs--release_created'] == 'true' && inputs.use-docs-gitflow == true }}
     runs-on: ${{ fromJSON(inputs.runs-on) }}
     permissions:
       contents: write
