--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -76,7 +76,7 @@ jobs:
           pnpm build
 
       - name: Deploy documentation
-        if: github.event_name != 'pull_request' && inputs.deploy == 'true' && (startsWith(github.ref, 'refs/tags/docs-v') || github.ref == format('refs/heads/{0}', inputs.default-branch))
+        if: github.event_name != 'pull_request' && inputs.deploy == true && (startsWith(github.ref, 'refs/tags/docs-v') || github.ref == format('refs/heads/{0}', inputs.default-branch))
         working-directory: ${{ inputs.working-directory }}
         env:
           GIT_USER: ${{ inputs.committer-name }}
